bitwarden.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitwarden-pod
  namespace: bitwarden
  labels:
    app: bitwarden
spec:
  selector:
    matchLabels:
      app: bitwarden
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: bitwarden
    spec:
      securityContext:
        fsGroup: 3000
      containers:
      - name: bitwarden-pod
        image: vaultwarden/server:latest
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsUser: 3000
          runAsGroup: 3000
        ports:
        - containerPort: 8080
          name: vw-http
          protocol: TCP
        volumeMounts:
        - mountPath: "/data"
          name: bitwarden-storage
          subPath: bitwarden
        resources: {}
      volumes:
      - name: bitwarden-storage
        persistentVolumeClaim:
          claimName: bitwarden-storage-pvc
