vaultwarden.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitwarden-pod
  namespace: bitwarden-dev
  labels:
    app: bitwarden
spec:
  selector:
    matchLabels:
      app: bitwarden
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: bitwarden
    spec:
      containers:
      - name: bitwarden-pod
        image: bitwarden/server@sha256:6f6ec220ed300e1a11475a91d270985915083512f9fb60c1c25783faaa66eef5
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: "/home/bitwarden"
          name: bitwarden-storage
        resources: {}
      volumes:
      - name: bitwarden-storage
        persistentVolumeClaim:
          claimName: bitwarden-storage-pvc
