service.bitwarden.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: bitwarden
  name: bitwarden
  namespace: bitwarden
spec:
  type: ClusterIP
  selector:
    app: bitwarden
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
