svc.vaultwarden.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitwarden-svc
  namespace: bitwarden-dev
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
  selector:
    app: "bitwarden"
